2010-08-30  Jaroslav Hajek  <highegg@gmail.com>

	* graphics.cc (convert_cdata): Avoid extracting pointer to temporary
	copy.

2010-08-30  John W. Eaton  <jwe@octave.org>

	* graphics.cc (convert_cdata): Allow cdata to be any type that
	can be converted to double.
	* graphics.h.in (surface::properties::init): Remove constraints
	on cdata and alphadata.

2010-08-27  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* graphics.cc (axes::properties::rotate_view): Don't rotate past
	the top and bottom.
	(axes::properties::update_camera): Fix the view when rotating to
	the bottom.
	(calc_dimensions): New static function.
	(F__calc_dimensions__) New defun to replace m-script function.
	* graphics.h.in (calc_dimension): Provide decl.
	* DLD-FUNCTIONS/fltk_backend.cc (plot_window::plot_window):
	Use calc_dimensions to decide whether the current figure should
	be rotated.
	(plot_window::mark_modified) Recompute the number of dimensions.
	Deactivate rotation if necessary.
	(plot_window::ndim) New data member.
	(plot_window::button_press, plot_window::handle): Only turn on
	rotation if ndim == 3.

2010-08-24  David Bateman  <dbateman@free.fr>

	* ls-mat5.cc (static void read_mat5_binary_data (std::istream&,
	float *, octave_idx_type, bool, mat5_data_type,
	oct_mach_info::float_format)) : New function
	(std::string read_mat5_binary_element (std::istream&,
	const std::string&, bool, bool&, octave_value&)): Treat
	MAT_FILE_SINGLE_CLASS as single precision rather than convert to
	double precision.
	(static void write_mat5_array (std::ostream&, const FloatNDArray&,
	bool), int save_mat5_array_length (const float*, octave_idx_type,
	bool), int save_mat5_array_length (const FloatComplex*,
	octave_idx_type, bool)): New functions.
	(int save_mat5_element_length (const octave_value&,
	const std::string&, bool save_as_floats, bool), bool
	save_mat5_binary_element (std::ostream&, const octave_value&,
	const std::string&, bool, bool, bool, bool)):  Treat